Format index page

--- a/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
@@ -11,16 +11,26 @@ td {
   font-size: 2em;
 }
 
-#header {
+h1 {
   font-family: 'Open Sans', sans-serif;
   font-size: 2em;
 }
 
-.sign-in-button
+h3 {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 2em;
+}
+
+.gus {
+  width: 50%;
+  text-align: center;
+}
 
 .newToWeightable {
   display: inline;
 }
+
+
 
 .breaker {
   clear: both;
