Add links to names in friends list, search results and all users page that lead to their view pages.

--- a/weightable_practice_scaffolding/app/views/users/all_users.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/all_users.html.erb
@@ -11,11 +11,12 @@
   <tbody>
     <% for user in @users do %>
       <tr>
-        <td><%= user.name %></td>
+        <td><%= link_to "#{user.name}", user_path(user.id) %></td>
         <% if current_user.friends.include?(User.find(user.id)) %>
-        <td><%= link_to 'Remove friend', destroy_friendships_path( id: user.id), method: :delete %></td>
+        <td><%= button_to 'Remove friend', destroy_friendships_path( id: user.id), method: :delete %></td>
         <% else %>
-        <td><%= link_to 'Add friend', friendships_path( friend_id: user), method: :post %></td>
+
+        <td><%= button_to 'Add friend', friendships_path( friend_id: user), method: :post %></td>
         <% end %>
       </tr>
     <% end %>
