--- a/weightable_practice_scaffolding/app/views/users/friends.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/friends.html.erb
@@ -12,7 +12,7 @@
     <% if current_user %> 
       <% @user.friendships.each do |friendship| %>
         <tr>
-          <td><%= friendship.friend.name %></td>
+          <td><%= link_to "#{friendship.friend.name}", user_path(friendship.friend.id) %></td>
         </tr>
       <% end %>
     <% end %>
