--- a/weightable_practice_scaffolding/app/views/layouts/_navigation_links.html.erb
+++ b/weightable_practice_scaffolding/app/views/layouts/_navigation_links.html.erb
@@ -8,7 +8,7 @@
   <%= content_tag(:li, link_to("Logout", destroy_user_session_path, method: "delete")) %>
 
 <% else %>
-        <%= link_to "About" %> <br>
+        <li><%= link_to "About" %></li> <br>
         
 
 
