--- a/weightable_practice_scaffolding/app/views/users/index.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/index.html.erb
@@ -48,11 +48,11 @@ New to weightable?
 <%= link_to "Sign up", new_user_registration_path %> 
 
 <% end %>
-<% if current_user %>
+<% unless current_user && current_user.weigh_ins %>
   <%= render 'initial_info_modal' %>
-<% end %>
 <script type='text/javascript'>
   $(document).on('ready', function(e){
     $('#myModal').modal();
   });
 </script>
+<% end %>
