--- a/weightable_practice_scaffolding/app/views/users/search.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/search.html.erb
@@ -3,11 +3,11 @@
     <% @results.each do |user| %>
       <tr>
         <td><%= user.profile_pic %></td>
-        <td><%= user.name %></td>
+        <td><%= link_to "#{user.name}", user_path(user.id) %></td>
         <% if current_user.friends.include?(User.find(user.id)) %>
-        <td><%= link_to 'Remove friend', destroy_friendships_path( id: user.id), method: :delete %></td>
+        <td><%= button_to 'Remove friend', destroy_friendships_path( id: user.id), method: :delete %></td>
         <% else %>
-        <td><%= link_to 'Add friend', friendships_path( friend_id: user), method: :post %></td>
+        <td><%= button_to 'Add friend', friendships_path( friend_id: user), method: :post %></td>
         <% end %>
       </tr>
     <% end %>
