Uncomment a few divs on application.html to make the pages viewable again

--- a/weightable_practice_scaffolding/app/views/layouts/application.html.erb
+++ b/weightable_practice_scaffolding/app/views/layouts/application.html.erb
@@ -17,12 +17,12 @@
     <main role="main" id="landing">
       <%= render 'layouts/messages' %>
       <!-- this adds text/content to the layout after these global elements -->
-      <!-- <div class="container" id="words" > -->
-	       	<!-- <div class="row"> -->
+      <div class="container" id="words" >
+	       	<div class="row">
 	       		<div class="span9">
-	       			    <!-- <%= yield %>
-	       		<!-- </div> -->
-	       	<!-- </div> -->
+	       			    <%= yield %>
+	       		</div> 
+	       	</div>
      </div>
     </main>
     <div class="footer">
