--- a/weightable_practice_scaffolding/app/views/users/show.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/show.html.erb
@@ -53,7 +53,7 @@
   <canvas id="myChart" width="400" height="400"></canvas>
 
 
-<% if @user.weigh_ins.first.created_at + 24*60*60 < Time.now %>
+<% if @user.weigh_ins.first.created_at + 24*60*60 > Time.now %>
 
   <%= button_to "Update Today's WeighIn", edit_user_weigh_in_path(@user, :id => @user.weigh_ins.last.id), method: :get%> 
 <% else %>
