--- a/weightable_practice_scaffolding/app/views/layouts/application.html.erb
+++ b/weightable_practice_scaffolding/app/views/layouts/application.html.erb
@@ -18,11 +18,11 @@
       <%= render 'layouts/messages' %>
       <!-- this adds text/content to the layout after these global elements -->
       <div class="container" id="words" >
-	       	<div class="row">
-	       		<div class="span9">
-	       			    <%= yield %>
-	       		</div> 
-	       	</div>
+       	<div class="row">
+       		<div class="lg-col-12">
+       			    <%= yield %>
+       		</div> 
+       	</div>
      </div>
     </main>
     <div class="footer">
