Add Google fonts to project locally, still need to figure out how to link correctly

--- a/weightable_practice_scaffolding/app/views/users/index.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-
+<!-- Ultimately planning on linking to these fonts in /assets/fonts -->
 <link href='http://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
