--- a/weightable_practice_scaffolding/app/assets/stylesheets/application.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,30 @@
  *= require jquery.ui.all
  *= require font-awesome
  */
+
+@font-face {
+    font-family: 'Dancing Script';
+    src: font-url('/assets/fonts/dancingscript-regular-webfont.eot');
+    src: font-url('/assets/fonts/dancingscript-regular-webfont.eot?iefix') format('eot'),
+        font-url('/assets/fonts/dancingscript-regular-webfont.woff') format('woff'),
+        font-url('/assets/fonts/dancingscript-regular-webfont.ttf') format('truetype'),
+        font-url('/assets/fonts/dancingscript-regular-webfont.svg#webfont') format('svg');
+}
+
+@font-face {
+    font-family: 'Font Awesome';
+    src: font-url('/assets/fonts/fontawesome-webfont.eot');
+    src: font-url('/assets/fonts/fontawesome-webfont.eot?iefix') format('eot'),
+        font-url('/assets/fonts/fontawesome-webfont.woff') format('woff'),
+        font-url('/assets/fonts/fontawesome-webfont.ttf') format('truetype'),
+        font-url('/assets/fonts/fontawesome-webfont.svg#webfont') format('svg');
+}
+
+@font-face {
+    font-family: 'Open Sans';
+    src: font-url('/assets/fonts/opensans-condlight-webfont.eot');
+    src: font-url('/assets/fonts/opensans-condlight-webfont.eot?iefix') format('eot'),
+        font-url('/assets/fonts/opensans-condlight-webfont.woff') format('woff'),
+        font-url('/assets/fonts/opensans-condlight-webfont.ttf') format('truetype'),
+        font-url('/assets/fonts/opensans-condlight-webfont.svg#webfont') format('svg');
+}
