--- a/weightable_practice_scaffolding/app/views/users/show.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/show.html.erb
@@ -104,8 +104,6 @@
         </div>
         <div id="collapse<%= counter %>" class="panel-collapse collapse">
           <div class="panel-body">
-            
-
             <% weight.comments[0..2].each do |comment| %>
             <div class="row">
               <div class="lg-col-2">
@@ -119,6 +117,17 @@
               </div>
             </div>
             <% end %>
+            <div id="createComment" >
+              <h3>Post a comment</h3>
+                <p>
+                  <%= form_for [@user, @weigh_in, @comment], :url=> user_weigh_in_comments_path(:user_id=> current_user.id, :weigh_in_id=> weight.id), :class=>"form-inline" do |f| %>
+                    <%= f.label :body %>
+                    <%= f.text_area :body %><br />
+
+                    <%= f.submit "Post comment!", :class=>"btn inline" %>
+                  <% end %>
+                </p>
+            </div>
           </div>
         </div>
       <% counter+=1 %>
