Remove padding from words class of global stylesheet scaffolds.css.scss

--- a/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
@@ -36,11 +36,20 @@ h3 {
   text-align: center;
 }
 
-.newToWeightable {
-  display: inline;
+.list {
+  text-align: left;
+  width: 40%;
+  margin-left: 10px;
+  margin-right: 10px;
+  font-size: 1.25em;
+  font-family: 'Open Sans', sans-serif;
 }
 
+.newToWeightable {
+  display: inline;
+  margin-top: 20px;
 
+}
 
 .breaker {
   clear: both;
