--- a/weightable_practice_scaffolding/app/views/users/index.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/index.html.erb
@@ -11,17 +11,16 @@
 
 <div class="gus col-md-5">
   <img src="/index/gus_chiggins.jpg"/>
-  <p>Gus Chiggins<br />
-    Weightable Founder & CEO
-  </p>
-  <div class="info">
-    <h3>Weightable is:</h3>
-      <ul>
-        <li class="fa fa-check">Results Oriented</li><br />
-        <li class="fa fa-check">Socially Connected</li><br />
-        <li class="fa fa-check">Accountability Focused</li><br />
-      </ul>
-  </div>
+    <p>Gus Chiggins<br />
+      Weightable Founder & CEO
+    </p> 
+
+  <h3>Weightable is:</h3>
+    <ul>
+      <li class="fa fa-check list"> Results Oriented</li><br />
+      <li class="fa fa-check list"> Socially Connected</li><br />
+      <li class="fa fa-check list"> Accountability Focused</li><br />
+    </ul>
 </div>
 
 <div class="col-md-2">
