--- a/weightable_practice_scaffolding/app/assets/stylesheets/scaffolds.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/scaffolds.css.scss
@@ -7,8 +7,9 @@ body {
 }
 
 #words{
-  padding-top: 80px;
-  padding-left: 40px;
+/*removing these to bring index higher up and left on page*/
+/*  padding-top: 80px;
+  padding-left: 40px;*/
 }
 
 navbar-brand {
