--- a/weightable_practice_scaffolding/app/views/users/index.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/index.html.erb
@@ -62,18 +62,18 @@
 </div>
 <div class="testimonial col-md-4">
 <img class="testimonial_picture" src="/index/testimonial-left.png" />
-  <p>“Gus Chiggins and his Weightable system helped keep me accountable to my New Year’s Resolution.”
+  <p class="testimonial_text">“Gus Chiggins and his Weightable system helped keep me accountable to my New Year’s Resolution.”
   </p>
 </div>
 
 <div class="testimonial col-md-4">
 <img class="testimonial_picture" src="/index/testimonial-middle.png" />
-  <p>“As a personal trainer, Gus Chiggins’ Weightable social network is a way for me to help my clients meet their fitness goals.”</p>
+  <p class="testimonial_text">“As a personal trainer, Gus Chiggins’ Weightable social network is a way for me to help my clients meet their fitness goals.”</p>
 </div>
 
 <div class="testimonial col-md-4">
 <img class="testimonial_picture" src="/index/testimonial-right.png" />
-  <p>“With his patent-pending Weightable social network, Gus Chiggins has revolutionized weightloss first hand.”</p>
+  <p class="testimonial_text">“With his patent-pending Weightable social network, Gus Chiggins has revolutionized weightloss first hand.”</p>
 </div>
 
   <tbody>
