--- a/weightable_practice_scaffolding/app/views/layouts/_navigation_links.html.erb
+++ b/weightable_practice_scaffolding/app/views/layouts/_navigation_links.html.erb
@@ -8,8 +8,5 @@
   <%= content_tag(:li, link_to("Logout", destroy_user_session_path, method: "delete")) %>
 
 <% else %>
-        <li><%= link_to "About" %></li> <br>
-        
-
-
+  <li class="navbar-right"><%= link_to "About" %></li> <br>      
 <% end %>
