Minor updates to look and feel. Still need to elimiante border radius from nav elements

--- a/weightable_practice_scaffolding/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -9,6 +9,7 @@ img {
 // override for the 'Home' navigation link
 .navbar-brand {
   font-size: inherit;
+  margin-left: -20px;
   }
 
 // THESE ARE EXAMPLES YOU CAN MODIFY
