--- a/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
@@ -36,6 +36,10 @@ h3 {
   text-align: center;
 }
 
+.pic {
+  margin-top:20px;
+}
+
 .list {
   text-align: left;
   width: 40%;
@@ -77,6 +81,7 @@ h3 {
 
 .testimonial_text {
   font-size: 1.45em;
+  line-height: 25px;
 }
 
 .footer {
