--- a/weightable_practice_scaffolding/app/views/users/index.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/index.html.erb
@@ -10,7 +10,7 @@
  <img id='underline' src="/index/underline.png"/> -->
 
 <div class="gus col-md-5">
-  <img src="/index/gus_chiggins.jpg"/>
+  <img class='pic' src="/index/gus_chiggins.png"/>
     <p>Gus Chiggins<br />
       Weightable Founder & CEO
     </p> 
@@ -68,7 +68,7 @@
 
 <div class="testimonial col-md-4">
 <img class="testimonial_picture" src="/index/testimonial-middle.png" />
-  <p class="testimonial_text">“As a personal trainer, Gus Chiggins’ Weightable social network is a way for me to help my clients meet their fitness goals.”</p>
+  <p class="testimonial_text">“As a personal trainer, Gus Chiggins’ Weightable app is a way for me to help my clients meet their goals.”</p>
 </div>
 
 <div class="testimonial col-md-4">
