--- a/weightable_practice_scaffolding/app/assets/stylesheets/application.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/application.css.scss
@@ -40,3 +40,7 @@
         font-url('/assets/fonts/opensans-condlight-webfont.ttf') format('truetype'),
         font-url('/assets/fonts/opensans-condlight-webfont.svg#webfont') format('svg');
 }
+
+* {
+  border-radius: none;
+}
