--- a/weightable_practice_scaffolding/app/views/layouts/application.html.erb
+++ b/weightable_practice_scaffolding/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       <!-- this adds text/content to the layout after these global elements -->
       <div class="container" id="words" >
        	<div class="row">
-       		<div class="lg-col-12">
+       		<div class="col-lg-12">
        			    <%= yield %>
        		</div> 
        	</div>
