--- a/weightable_practice_scaffolding/app/views/weigh_ins/show.html.erb
+++ b/weightable_practice_scaffolding/app/views/weigh_ins/show.html.erb
@@ -8,10 +8,7 @@
     <p> <%= @weigh_in.status %> </p>
 </div>
 
-<%= form_for @wi_yeehaw, :url => wi_yeehaw_path(:user_id=> "#{current_user.id}", :weigh_in_id=> "#{params[:id]}" ) do |f| %>
-  
-  <%= f.submit "Yeehaw!" %>
-<% end %>
+<%= button_to "Yeehaw!", wi_yeehaw_path(:user_id=> "#{current_user.id}", :weigh_in_id=> "#{params[:id]}" )%>
 
 <p> <%= @wi_yeehaws %> </p>
 
