--- a/weightable_practice_scaffolding/app/views/layouts/application.html.erb
+++ b/weightable_practice_scaffolding/app/views/layouts/application.html.erb
@@ -18,14 +18,18 @@
       <%= render 'layouts/messages' %>
       <!-- this adds text/content to the layout after these global elements -->
       <div class="container" id="words" >
-       	<div class="row">
-       		<div class="lg-col-12">
-       			    <%= yield %>
-       		</div> 
-       	</div>
+		    <%= yield %>
      </div>
     </main>
     <div class="footer">
     </div>
   </body>
 </html>
+<% if current_user && current_user.weigh_ins.count == 0 %>
+  <%= render 'initial_info_modal' %>
+<script type='text/javascript'>
+  $(document).on('ready', function(e){
+    $('#myModal').modal();
+  });
+</script>
+<% end %>
